<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/pick_source"
        android:textColor="@android:color/white"
        android:textSize="@dimen/default_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="140dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/ic_photo_camera_black_24dp"
            android:foreground="?android:selectableItemBackground"
            android:padding="15dp"
            android:text="@string/take_picture"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/gallery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/ic_photo_library_black_24dp"
            android:foreground="?android:selectableItemBackground"
            android:padding="15dp"
            android:text="@string/open_gallery"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

</LinearLayout>