<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.AddProductActivity"
    tools:ignore="MergeRootFrame">

    <android.support.v4.widget.NestedScrollView

        android:id="@+id/details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/product_header"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/text_margin"
                android:background="@drawable/dashed_background"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground">

                <ImageView
                    android:id="@+id/add_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_white_24dp"
                    android:tint="@color/light_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/add_sign"
                    android:layout_centerHorizontal="true"
                    android:text="@string/no_image_2"
                    android:textColor="@color/light_gray"
                    android:textSize="@dimen/default_text_size" />

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textAppearance="@style/RegularFont"
                android:textSize="@dimen/default_text_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:background="@drawable/edittext_background"
                android:hint="@string/no_name"
                android:inputType="text|textMultiLine"
                android:maxLines="2"
                android:paddingBottom="10dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAllCaps="true"
                android:textAppearance="@style/RegularFont"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:hint="@string/no_description"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/images"
                android:textAllCaps="true"
                android:textAppearance="@style/RegularFont"
                android:textSize="@dimen/default_text_size" />

            <android.support.v7.widget.GridLayout
                android:id="@+id/images_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="2"
                app:orientation="horizontal"
                app:rowCount="2">

                <include
                    layout="@layout/add_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill"/>

                <include
                    layout="@layout/add_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    app:layout_columnWeight="1" />

                <include
                    layout="@layout/add_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    app:layout_columnWeight="1" />
            </android.support.v7.widget.GridLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

</FrameLayout>